--- a/OUTROS/consulta_corte.ipynb
+++ b/OUTROS/consulta_corte.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "1cdb63ad",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "8c1640ae",
    "metadata": {},
    "outputs": [
@@ -97,140 +97,25 @@
        "      <th>0</th>\n",
        "      <td>464141</td>\n",
        "      <td>3</td>\n",
-       "      <td>5224.50</td>\n",
+       "      <td>5224.5</td>\n",
        "      <td>90.0</td>\n",
        "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>362.0</td>\n",
+       "      <td>354.0</td>\n",
        "      <td>11.0</td>\n",
-       "      <td>-351.0</td>\n",
+       "      <td>-343.0</td>\n",
        "      <td>2025-09-10</td>\n",
        "      <td>validade filial</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>468973</td>\n",
-       "      <td>2</td>\n",
-       "      <td>718.45</td>\n",
-       "      <td>133.0</td>\n",
-       "      <td>ACHOC NESCAU 200GR</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-82.0</td>\n",
-       "      <td>2025-09-09</td>\n",
-       "      <td>3 caixa e 13 unidade no AP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>470878</td>\n",
-       "      <td>2</td>\n",
-       "      <td>698.87</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>FITA ADES EMPAC TEK BOND TRANSP 48MMX40M</td>\n",
-       "      <td>1191.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1191.0</td>\n",
-       "      <td>2025-09-09</td>\n",
-       "      <td>ultima entrada 08/09/2025</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>450655</td>\n",
-       "      <td>2</td>\n",
-       "      <td>303.98</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>SAB LUX 125GR BUQUE DE JASMIM</td>\n",
-       "      <td>575.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-575.0</td>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>ultima entrada 03/09/2025</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>448268</td>\n",
-       "      <td>2</td>\n",
-       "      <td>157.18</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>SOPA MAGGI 68GR CREME CEBOLA</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>2 unidade no AP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>280000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>182.79</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>LIMP VEJA 500ML M USO ORIGINAL</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-7.0</td>\n",
-       "      <td>2025-09-09</td>\n",
-       "      <td>inversão, liberado pelo comprador</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>428511</td>\n",
-       "      <td>2</td>\n",
-       "      <td>29.04</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>ESPONJA 3M LIMPEZA SC BRITE NAO RISCA</td>\n",
-       "      <td>340.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-340.0</td>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>ultima entrada 03/09/2025</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>474139</td>\n",
-       "      <td>2</td>\n",
-       "      <td>85.35</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>SAND HAV FEM SLIM GLITTER II CANYON 37/8</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-10.0</td>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>5 unidade no AP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE  \\\n",
-       "0  464141          3      5224.50        90.0   \n",
-       "1  468973          2       718.45       133.0   \n",
-       "2  470878          2       698.87        56.0   \n",
-       "3  450655          2       303.98         8.0   \n",
-       "4  448268          2       157.18         3.0   \n",
-       "5  280000          2       182.79         2.0   \n",
-       "6  428511          2        29.04         2.0   \n",
-       "7  474139          2        85.35         2.0   \n",
+       "      COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE               Descrição   \\\n",
+       "0  464141          3       5224.5        90.0  CREME LEITE TIROL 200GR   \n",
        "\n",
-       "                                 Descrição   Estoque  BLOQUEADO     var  \\\n",
-       "0                   CREME LEITE TIROL 200GR    362.0       11.0  -351.0   \n",
-       "1                        ACHOC NESCAU 200GR     85.0        3.0   -82.0   \n",
-       "2  FITA ADES EMPAC TEK BOND TRANSP 48MMX40M   1191.0        0.0 -1191.0   \n",
-       "3             SAB LUX 125GR BUQUE DE JASMIM    575.0        0.0  -575.0   \n",
-       "4              SOPA MAGGI 68GR CREME CEBOLA      7.0        5.0    -2.0   \n",
-       "5            LIMP VEJA 500ML M USO ORIGINAL      7.0        0.0    -7.0   \n",
-       "6     ESPONJA 3M LIMPEZA SC BRITE NAO RISCA    340.0        0.0  -340.0   \n",
-       "7  SAND HAV FEM SLIM GLITTER II CANYON 37/8     10.0        0.0   -10.0   \n",
-       "\n",
-       "        DATA                             RETURN  \n",
-       "0 2025-09-10                    validade filial  \n",
-       "1 2025-09-09         3 caixa e 13 unidade no AP  \n",
-       "2 2025-09-09          ultima entrada 08/09/2025  \n",
-       "3 2025-09-10          ultima entrada 03/09/2025  \n",
-       "4 2025-09-10                    2 unidade no AP  \n",
-       "5 2025-09-09  inversão, liberado pelo comprador  \n",
-       "6 2025-09-10          ultima entrada 03/09/2025  \n",
-       "7 2025-09-10                    5 unidade no AP  "
+       "   Estoque  BLOQUEADO    var       DATA           RETURN  \n",
+       "0    354.0       11.0 -343.0 2025-09-10  validade filial  "
       ]
      },
      "metadata": {},
@@ -251,7 +136,7 @@
     "df = var_corte.merge(var_86, left_on= 'COD', right_on= 'Código', how= 'left').drop(columns='Código')\n",
     "df['var'] = df['BLOQUEADO'] - df['Estoque']\n",
     "\n",
-    "validar = df.loc[(df['var'] < 0) & (df['QTDE_DIAS'] > 1)]\n",
+    "validar = df.loc[(df['var'] < 0) & (df['QTDE_DIAS'] > 2)]\n",
     "validar = validar.merge(df_retorno, left_on= 'COD', right_on= 'CODPROD', how= \"left\").drop(columns='CODPROD')\n",
     "validar[['RETURN', 'DATA']] = validar[['RETURN','DATA']].fillna(\"\")\n",
     "\n",
@@ -260,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "94e22145",
    "metadata": {},
    "outputs": [
@@ -328,13 +213,178 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATA</th>\n",
+       "      <th>CODPROD</th>\n",
+       "      <th>RETURN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-09-09</td>\n",
+       "      <td>280000</td>\n",
+       "      <td>inversão, liberado pelo comprador</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-09-09</td>\n",
+       "      <td>444365</td>\n",
+       "      <td>Produto na camara-fria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>464141</td>\n",
+       "      <td>validade filial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-09-09</td>\n",
+       "      <td>468973</td>\n",
+       "      <td>3 caixa e 13 unidade no AP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-09-09</td>\n",
+       "      <td>470878</td>\n",
+       "      <td>ultima entrada 08/09/2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>450655</td>\n",
+       "      <td>ultima entrada 03/09/2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>428511</td>\n",
+       "      <td>ultima entrada 03/09/2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>448268</td>\n",
+       "      <td>2 unidade no AP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2025-09-10</td>\n",
+       "      <td>474139</td>\n",
+       "      <td>5 unidade no AP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATA  CODPROD                             RETURN\n",
+       "0 2025-09-09   280000  inversão, liberado pelo comprador\n",
+       "1 2025-09-09   444365            Produto na camara-fria \n",
+       "2 2025-09-10   464141                    validade filial\n",
+       "3 2025-09-09   468973         3 caixa e 13 unidade no AP\n",
+       "4 2025-09-09   470878          ultima entrada 08/09/2025\n",
+       "5 2025-09-10   450655          ultima entrada 03/09/2025\n",
+       "6 2025-09-10   428511          ultima entrada 03/09/2025\n",
+       "7 2025-09-10   448268                    2 unidade no AP\n",
+       "8 2025-09-10   474139                    5 unidade no AP"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "\n",
     "comp = df_67.loc[df_67['COD'] == 428511]\n",
     "comp = comp[['DATA','HORAS', 'COD', 'DESCRIÇÃO', 'MOTIVO', 'FUNCIONARIO']].sort_values(by=['DATA','HORAS'], ascending= False)\n",
-    "display(comp)"
+    "display(comp)\n",
+    "display(df_retorno)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00c1dbd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATA</th>\n",
+       "      <th>CODPROD</th>\n",
+       "      <th>RETURN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-09-11</td>\n",
+       "      <td>471092</td>\n",
+       "      <td>AJUSTADA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATA  CODPROD    RETURN\n",
+       "0  2025-09-11   471092  AJUSTADA"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_ajust = pd.DataFrame({\"DATA\":['2025-09-11'],\n",
+    "                         \"CODPROD\":[471092],\n",
+    "                         \"RETURN\":[\"AJUSTADA\"]\n",
+    "                         })\n",
+    "df_retorno.pd.concat()\n",
+    "\n",
+    "display(df_ajust)"
    ]
   }
  ],
