--- a/OUTROS/consulta_corte.ipynb
+++ b/OUTROS/consulta_corte.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "from path_arquivos import *\n",
     "import pandas as pd\n",
-    "caminho = r'z:\\1 - CD Dia\\4 - Equipe PCL\\6.1 - Inteligência Logística\\6.1.1 Analise de Cortes\\2025\\Acompanhamento de produtos cortados.xlsx'\n",
+    "caminho = output.var_corte\n",
     "\n",
     "df_67 = pd.read_excel(caminho, sheet_name= 'CORTE 2025')\n",
     "df_retorno = pd.read_excel(caminho, sheet_name= \"RETORNO\")\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8c1640ae",
    "metadata": {},
    "outputs": [
@@ -100,9 +100,9 @@
        "      <td>5224.5</td>\n",
        "      <td>90.0</td>\n",
        "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>354.0</td>\n",
+       "      <td>317.0</td>\n",
        "      <td>11.0</td>\n",
-       "      <td>-343.0</td>\n",
+       "      <td>-306.0</td>\n",
        "      <td>2025-09-10</td>\n",
        "      <td>validade filial</td>\n",
        "    </tr>\n",
@@ -115,7 +115,7 @@
        "0  464141          3       5224.5        90.0  CREME LEITE TIROL 200GR   \n",
        "\n",
        "   Estoque  BLOQUEADO    var       DATA           RETURN  \n",
-       "0    354.0       11.0 -343.0 2025-09-10  validade filial  "
+       "0    317.0       11.0 -306.0 2025-09-10  validade filial  "
       ]
      },
      "metadata": {},
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "94e22145",
    "metadata": {},
    "outputs": [
@@ -180,21 +180,30 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14056</th>\n",
-       "      <td>2025-09-02</td>\n",
-       "      <td>05:05:00</td>\n",
-       "      <td>428511</td>\n",
-       "      <td>ESPONJA 3M LIMPEZA SC BRITE NAO RISCA</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
+       "      <th>14126</th>\n",
+       "      <td>2025-09-05</td>\n",
+       "      <td>11:31:00</td>\n",
+       "      <td>464141</td>\n",
+       "      <td>CREME LEITE TIROL 200GR</td>\n",
+       "      <td>MERCADORIA PROXIMO AO VENCIMENTO</td>\n",
+       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14040</th>\n",
+       "      <th>14094</th>\n",
+       "      <td>2025-09-04</td>\n",
+       "      <td>10:36:00</td>\n",
+       "      <td>464141</td>\n",
+       "      <td>CREME LEITE TIROL 200GR</td>\n",
+       "      <td>MERCADORIA PROXIMO AO VENCIMENTO</td>\n",
+       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14027</th>\n",
        "      <td>2025-09-01</td>\n",
-       "      <td>11:48:00</td>\n",
-       "      <td>428511</td>\n",
-       "      <td>ESPONJA 3M LIMPEZA SC BRITE NAO RISCA</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
+       "      <td>09:13:00</td>\n",
+       "      <td>464141</td>\n",
+       "      <td>CREME LEITE TIROL 200GR</td>\n",
+       "      <td>MERCADORIA PROXIMO AO VENCIMENTO</td>\n",
        "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -202,13 +211,15 @@
        "</div>"
       ],
       "text/plain": [
-       "            DATA     HORAS     COD                              DESCRIÇÃO  \\\n",
-       "14056 2025-09-02  05:05:00  428511  ESPONJA 3M LIMPEZA SC BRITE NAO RISCA   \n",
-       "14040 2025-09-01  11:48:00  428511  ESPONJA 3M LIMPEZA SC BRITE NAO RISCA   \n",
+       "            DATA     HORAS     COD                DESCRIÇÃO  \\\n",
+       "14126 2025-09-05  11:31:00  464141  CREME LEITE TIROL 200GR   \n",
+       "14094 2025-09-04  10:36:00  464141  CREME LEITE TIROL 200GR   \n",
+       "14027 2025-09-01  09:13:00  464141  CREME LEITE TIROL 200GR   \n",
        "\n",
-       "                          MOTIVO                           FUNCIONARIO  \n",
-       "14056  QUANTIDADE INFERIOR DA OS               ALEANDRA TRINDADE SOUSA  \n",
-       "14040  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  "
+       "                                 MOTIVO                           FUNCIONARIO  \n",
+       "14126  MERCADORIA PROXIMO AO VENCIMENTO  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
+       "14094  MERCADORIA PROXIMO AO VENCIMENTO  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
+       "14027  MERCADORIA PROXIMO AO VENCIMENTO  CARLOS ALBERTO SANTOS DA SILVA FILHO  "
       ]
      },
      "metadata": {},
@@ -318,73 +329,10 @@
    ],
    "source": [
     "\n",
-    "comp = df_67.loc[df_67['COD'] == 428511]\n",
+    "comp = df_67.loc[df_67['COD'] == 464141]\n",
     "comp = comp[['DATA','HORAS', 'COD', 'DESCRIÇÃO', 'MOTIVO', 'FUNCIONARIO']].sort_values(by=['DATA','HORAS'], ascending= False)\n",
     "display(comp)\n",
     "display(df_retorno)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00c1dbd4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DATA</th>\n",
-       "      <th>CODPROD</th>\n",
-       "      <th>RETURN</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025-09-11</td>\n",
-       "      <td>471092</td>\n",
-       "      <td>AJUSTADA</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         DATA  CODPROD    RETURN\n",
-       "0  2025-09-11   471092  AJUSTADA"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "\n",
-    "df_ajust = pd.DataFrame({\"DATA\":['2025-09-11'],\n",
-    "                         \"CODPROD\":[471092],\n",
-    "                         \"RETURN\":[\"AJUSTADA\"]\n",
-    "                         })\n",
-    "df_retorno.pd.concat()\n",
-    "\n",
-    "display(df_ajust)"
    ]
   }
  ],
