--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "44118fba",
    "metadata": {},
    "outputs": [],
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "60927a5a",
+   "execution_count": 35,
+   "id": "9950b5ab",
    "metadata": {},
    "outputs": [
     {
@@ -28,50 +28,47 @@
     }
    ],
    "source": [
-    "df_28 = pd.read_excel(ar_xlsx.ar_28, usecols= ['NUMOS','CODPROD', 'DESCRICAO', 'ENDERECO_ORIG', 'RUA', 'PREDIO', 'NIVEL', 'APTO','RUA_1', 'PREDIO_1', 'NIVEL_1', 'APTO_1', 'QT', 'POSICAO', 'CODFUNCOS', 'CODFUNCESTORNO', 'Tipo O.S.', 'FUNCOSFIM','FUNCGER'])\n",
-    "df_28 = df_28.loc[(df_28['NIVEL'].between(2,8)) & (df_28['Tipo O.S.'] == '58 - Transferencia de Para Vertical')]\n",
-    "df_28[['CODFUNCESTORNO', 'CODFUNCOS']] = df_28[['CODFUNCESTORNO', 'CODFUNCOS']].fillna(0).astype(int)\n",
-    "df_28['ID_COD'] = df_28['ENDERECO_ORIG'].astype(str) + \" - \" + df_28['CODPROD'].astype(str)\n",
+    "col_totvs = ['DATA', 'CONFERENCIA', 'PRODUTO','VALIDADE', 'PROBLEMA']\n",
+    "totvs = pd.read_excel(totvs.shelf_life, header= 4, usecols=col_totvs,engine= 'xlrd')\n",
     "\n",
-    "df_aereo = pd.read_csv(ar_csv.ar_end, header= None, names= col_name.cEnd)\n",
-    "df_aereo = df_aereo.loc[df_aereo['TIPO_PK'] == 'AE']\n",
-    "df_aereo = df_aereo[['COD_END', 'COD', 'QTDE', 'ENTRADA', 'SAIDA']]\n",
-    "df_aereo['ID_COD'] = df_aereo['COD_END'].astype(str) + \" - \" + df_aereo['COD'].astype(str)\n",
-    "\n",
-    "df_func = pd.read_excel(ar_xlsx.ar_func, sheet_name= 'FUNCIONARIOS', usecols= ['MATRICULA', 'TIPO'])\n",
-    "\n",
-    "df = df_28.merge(df_aereo, left_on= 'ID_COD', right_on= 'ID_COD', how= 'left').infer_objects(copy=False).fillna(0).drop(['COD_END', 'COD'],axis= 1)\n",
-    "df = df.merge(df_func, left_on= 'CODFUNCOS', right_on= 'MATRICULA', how= 'left').drop(columns=['MATRICULA'])\n",
-    "df['TIPO'] = df['TIPO'].fillna(\"FUNC\")   "
+    "col_bonus = ['NUMBONUS', 'CODPROD', 'CODENDERECO', 'DTVALIDADE']\n",
+    "bonus = pd.read_excel(ar_xlsx.ar_64, usecols= col_bonus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8b7b9884",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "df['QTDE'] = df['QTDE'].astype(str).str.replace('.', '', regex=False)\n",
-    "df['QT'] = df['QT'].astype(str).str.replace('.', '', regex=False)\n",
-    "\n",
-    "df['QTDE'] = df['QTDE'].astype(str).str.replace(',', '.', regex=False)\n",
-    "df['QT'] = df['QT'].astype(str).str.replace(',', '.', regex=False)\n",
-    "\n",
-    "df['TIPO_OP'] = np.where(df['QTDE'].astype(float) >= df['QT'].astype(float), \"baixa\", \"retorno\")\n",
-    "\n",
-    "df_fim = df.loc[(df['TIPO'] != 'EMPILHADOR') & (df['TIPO'] != 'ABASTECEDOR') & (df['CODFUNCOS'] > 0) & (df['CODFUNCESTORNO']== 0) & (df['QTDE'].astype(float) == 0)]\n",
-    "df_fim = df_fim[['NUMOS','CODPROD', 'DESCRICAO', 'RUA', 'PREDIO', 'NIVEL','APTO', 'RUA_1', 'PREDIO_1', 'NIVEL_1', 'APTO_1','FUNCOSFIM','TIPO_OP','QTDE','QT']].copy()\n",
-    "df_fim = df_fim.sort_values(by=['RUA', 'PREDIO'], ascending= True, axis= 0)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9e20990e",
+   "execution_count": 42,
+   "id": "f6499e84",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['DATA', 'CONFERENCIA', 'PRODUTO', 'VALIDADE', 'PROBLEMA', 'COD', 'DESC',\n",
+       "       'ID_VAR'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DATA                   object\n",
+       "CONFERENCIA            object\n",
+       "PRODUTO                object\n",
+       "VALIDADE       datetime64[ns]\n",
+       "PROBLEMA               object\n",
+       "COD                     int64\n",
+       "DESC                   object\n",
+       "ID_VAR                 object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -93,181 +90,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>NUMOS</th>\n",
-       "      <th>CODPROD</th>\n",
-       "      <th>DESCRICAO</th>\n",
-       "      <th>RUA</th>\n",
-       "      <th>PREDIO</th>\n",
-       "      <th>NIVEL</th>\n",
-       "      <th>APTO</th>\n",
-       "      <th>RUA_1</th>\n",
-       "      <th>PREDIO_1</th>\n",
-       "      <th>NIVEL_1</th>\n",
-       "      <th>APTO_1</th>\n",
-       "      <th>FUNCOSFIM</th>\n",
-       "      <th>TIPO_OP</th>\n",
-       "      <th>QTDE</th>\n",
-       "      <th>QT</th>\n",
+       "      <th>DATA</th>\n",
+       "      <th>CONFERENCIA</th>\n",
+       "      <th>PRODUTO</th>\n",
+       "      <th>VALIDADE</th>\n",
+       "      <th>PROBLEMA</th>\n",
+       "      <th>COD</th>\n",
+       "      <th>DESC</th>\n",
+       "      <th>ID_VAR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>928</th>\n",
-       "      <td>47174211</td>\n",
-       "      <td>474929</td>\n",
-       "      <td>BISC CORY 80GR RECH HIPOPO DOCE DE LEITE</td>\n",
-       "      <td>2</td>\n",
-       "      <td>41</td>\n",
-       "      <td>5</td>\n",
-       "      <td>501</td>\n",
-       "      <td>2</td>\n",
-       "      <td>81</td>\n",
-       "      <td>1</td>\n",
-       "      <td>104</td>\n",
-       "      <td>LUCIANO ALBUQUERQUE RIPARDO</td>\n",
-       "      <td>retorno</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20</td>\n",
+       "      <th>0</th>\n",
+       "      <td>03/09/2025</td>\n",
+       "      <td>285597</td>\n",
+       "      <td>465370 - MARGARINA CREMOSY BD 50% LIP 14,5K</td>\n",
+       "      <td>2026-05-05</td>\n",
+       "      <td>SHELF-LIFE ACIMA DO PRAZO DE VALIDADE</td>\n",
+       "      <td>465370</td>\n",
+       "      <td>MARGARINA CREMOSY BD 50% LIP 14,5K</td>\n",
+       "      <td>285597-465370-2026-05-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143</th>\n",
-       "      <td>47170702</td>\n",
-       "      <td>473001</td>\n",
-       "      <td>CHOC NESTLE KIT KAT 185,6GR CELEBREAK</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>201</td>\n",
-       "      <td>11</td>\n",
-       "      <td>56</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>CLEBER VIEIRA DA SILVA</td>\n",
-       "      <td>retorno</td>\n",
-       "      <td>0</td>\n",
-       "      <td>180</td>\n",
+       "      <th>1</th>\n",
+       "      <td>03/09/2025</td>\n",
+       "      <td>285598</td>\n",
+       "      <td>442902 - DES REXONA AERO 90G/150M MASC INVISIBL</td>\n",
+       "      <td>2028-08-21</td>\n",
+       "      <td>SHELF-LIFE ACIMA DO PRAZO DE VALIDADE</td>\n",
+       "      <td>442902</td>\n",
+       "      <td>DES REXONA AERO 90G/150M MASC INVISIBL</td>\n",
+       "      <td>285598-442902-2028-08-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1013</th>\n",
-       "      <td>47175054</td>\n",
-       "      <td>458736</td>\n",
-       "      <td>AMAC DOWNY  900ML CONC PAIXAO</td>\n",
-       "      <td>26</td>\n",
-       "      <td>49</td>\n",
-       "      <td>5</td>\n",
-       "      <td>502</td>\n",
-       "      <td>26</td>\n",
-       "      <td>42</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>LUCIANO ALBUQUERQUE RIPARDO</td>\n",
-       "      <td>retorno</td>\n",
-       "      <td>0</td>\n",
-       "      <td>108</td>\n",
+       "      <th>2</th>\n",
+       "      <td>03/09/2025</td>\n",
+       "      <td>285598</td>\n",
+       "      <td>475059 - DES DOVE AERO 87GR FEM PESSEGO LEITE</td>\n",
+       "      <td>2028-08-01</td>\n",
+       "      <td>SHELF-LIFE ACIMA DO PRAZO DE VALIDADE</td>\n",
+       "      <td>475059</td>\n",
+       "      <td>DES DOVE AERO 87GR FEM PESSEGO LEITE</td>\n",
+       "      <td>285598-475059-2028-08-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>47168187</td>\n",
-       "      <td>475378</td>\n",
-       "      <td>SABAO LIQ OMO CICLO RAP 750ML AC CUIDADO</td>\n",
-       "      <td>27</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>402</td>\n",
-       "      <td>26</td>\n",
-       "      <td>46</td>\n",
-       "      <td>1</td>\n",
-       "      <td>202</td>\n",
-       "      <td>JOAO ALLISON DE LIRA MONTEIRO</td>\n",
-       "      <td>retorno</td>\n",
-       "      <td>0</td>\n",
-       "      <td>384</td>\n",
+       "      <th>3</th>\n",
+       "      <td>03/09/2025</td>\n",
+       "      <td>285599</td>\n",
+       "      <td>458223 - BISC MARIL TEENS 80GR BAUNY</td>\n",
+       "      <td>2026-03-04</td>\n",
+       "      <td>SHELF-LIFE ABAIXO DO PERCENTUAL DE TOLER NCIA</td>\n",
+       "      <td>458223</td>\n",
+       "      <td>BISC MARIL TEENS 80GR BAUNY</td>\n",
+       "      <td>285599-458223-2026-03-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1012</th>\n",
-       "      <td>47175052</td>\n",
-       "      <td>456038</td>\n",
-       "      <td>SABAO LIQ BRILHANTE 3LT LIMPEZA TOTAL</td>\n",
-       "      <td>27</td>\n",
-       "      <td>27</td>\n",
-       "      <td>3</td>\n",
-       "      <td>302</td>\n",
-       "      <td>22</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>LUCIANO ALBUQUERQUE RIPARDO</td>\n",
-       "      <td>retorno</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>586</th>\n",
-       "      <td>47171561</td>\n",
-       "      <td>455529</td>\n",
-       "      <td>LAPIS COR F CAST 24 COR</td>\n",
-       "      <td>28</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>202</td>\n",
-       "      <td>28</td>\n",
-       "      <td>38</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>JOAO ALLISON DE LIRA MONTEIRO</td>\n",
-       "      <td>retorno</td>\n",
-       "      <td>0</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1367</th>\n",
-       "      <td>47180951</td>\n",
-       "      <td>465388</td>\n",
-       "      <td>CHOC FERRERO KINDER OVO 2X20GR ROSA T2</td>\n",
-       "      <td>200</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>402</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>3</td>\n",
-       "      <td>302</td>\n",
-       "      <td>LUCIANE RIBEIRO DA SILVA</td>\n",
-       "      <td>retorno</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2400</td>\n",
+       "      <th>4</th>\n",
+       "      <td>03/09/2025</td>\n",
+       "      <td>285599</td>\n",
+       "      <td>458224 - BISC MARIL TEENS 80GR CHOCOLATE</td>\n",
+       "      <td>2026-06-09</td>\n",
+       "      <td>SHELF-LIFE ACIMA DO PRAZO DE VALIDADE</td>\n",
+       "      <td>458224</td>\n",
+       "      <td>BISC MARIL TEENS 80GR CHOCOLATE</td>\n",
+       "      <td>285599-458224-2026-06-09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         NUMOS  CODPROD                                 DESCRICAO  RUA  \\\n",
-       "928   47174211   474929  BISC CORY 80GR RECH HIPOPO DOCE DE LEITE    2   \n",
-       "143   47170702   473001     CHOC NESTLE KIT KAT 185,6GR CELEBREAK    6   \n",
-       "1013  47175054   458736             AMAC DOWNY  900ML CONC PAIXAO   26   \n",
-       "81    47168187   475378  SABAO LIQ OMO CICLO RAP 750ML AC CUIDADO   27   \n",
-       "1012  47175052   456038     SABAO LIQ BRILHANTE 3LT LIMPEZA TOTAL   27   \n",
-       "586   47171561   455529                   LAPIS COR F CAST 24 COR   28   \n",
-       "1367  47180951   465388    CHOC FERRERO KINDER OVO 2X20GR ROSA T2  200   \n",
+       "         DATA CONFERENCIA                                          PRODUTO  \\\n",
+       "0  03/09/2025      285597      465370 - MARGARINA CREMOSY BD 50% LIP 14,5K   \n",
+       "1  03/09/2025      285598  442902 - DES REXONA AERO 90G/150M MASC INVISIBL   \n",
+       "2  03/09/2025      285598    475059 - DES DOVE AERO 87GR FEM PESSEGO LEITE   \n",
+       "3  03/09/2025      285599             458223 - BISC MARIL TEENS 80GR BAUNY   \n",
+       "4  03/09/2025      285599         458224 - BISC MARIL TEENS 80GR CHOCOLATE   \n",
        "\n",
-       "      PREDIO  NIVEL  APTO  RUA_1  PREDIO_1  NIVEL_1  APTO_1  \\\n",
-       "928       41      5   501      2        81        1     104   \n",
-       "143        1      2   201     11        56        1     101   \n",
-       "1013      49      5   502     26        42        1     101   \n",
-       "81         2      4   402     26        46        1     202   \n",
-       "1012      27      3   302     22        23        1     101   \n",
-       "586        4      2   202     28        38        1     102   \n",
-       "1367       1      4   402      1        17        3     302   \n",
+       "    VALIDADE                                       PROBLEMA     COD  \\\n",
+       "0 2026-05-05          SHELF-LIFE ACIMA DO PRAZO DE VALIDADE  465370   \n",
+       "1 2028-08-21          SHELF-LIFE ACIMA DO PRAZO DE VALIDADE  442902   \n",
+       "2 2028-08-01          SHELF-LIFE ACIMA DO PRAZO DE VALIDADE  475059   \n",
+       "3 2026-03-04  SHELF-LIFE ABAIXO DO PERCENTUAL DE TOLER NCIA  458223   \n",
+       "4 2026-06-09          SHELF-LIFE ACIMA DO PRAZO DE VALIDADE  458224   \n",
        "\n",
-       "                          FUNCOSFIM  TIPO_OP QTDE    QT  \n",
-       "928     LUCIANO ALBUQUERQUE RIPARDO  retorno    0    20  \n",
-       "143          CLEBER VIEIRA DA SILVA  retorno    0   180  \n",
-       "1013    LUCIANO ALBUQUERQUE RIPARDO  retorno    0   108  \n",
-       "81    JOAO ALLISON DE LIRA MONTEIRO  retorno    0   384  \n",
-       "1012    LUCIANO ALBUQUERQUE RIPARDO  retorno    0    15  \n",
-       "586   JOAO ALLISON DE LIRA MONTEIRO  retorno    0    80  \n",
-       "1367       LUCIANE RIBEIRO DA SILVA  retorno    0  2400  "
+       "                                      DESC                    ID_VAR  \n",
+       "0       MARGARINA CREMOSY BD 50% LIP 14,5K  285597-465370-2026-05-05  \n",
+       "1   DES REXONA AERO 90G/150M MASC INVISIBL  285598-442902-2028-08-21  \n",
+       "2     DES DOVE AERO 87GR FEM PESSEGO LEITE  285598-475059-2028-08-01  \n",
+       "3              BISC MARIL TEENS 80GR BAUNY  285599-458223-2026-03-04  \n",
+       "4          BISC MARIL TEENS 80GR CHOCOLATE  285599-458224-2026-06-09  "
       ]
      },
      "metadata": {},
@@ -275,7 +188,18 @@
     }
    ],
    "source": [
-    "display(df_fim)"
+    "totvs['COD'] = (totvs['PRODUTO'].str.split(\"-\").str[0]).astype(int)\n",
+    "totvs['DESC'] = (totvs['PRODUTO'].str.split(\"-\").str[1])\n",
+    "totvs['CONFERENCIA'] = totvs['CONFERENCIA'].astype(str)\n",
+    "totvs['CONFERENCIA'] = totvs['CONFERENCIA'].str.replace(\".\", \"\")\n",
+    "totvs['VALIDADE'] = pd.to_datetime(totvs['VALIDADE'],dayfirst=True)\n",
+    "totvs['ID_VAR'] = totvs['CONFERENCIA'].astype(str) + \"-\" + totvs['COD'].astype(str) + \"-\" + totvs['VALIDADE'].astype(str)\n",
+    "\n",
+    "bonus['ID_VAR'] = bonus['NUMBONUS'].astype(str) + \"-\" + bonus['CODPROD'].astype(str) + \"-\" + bonus['DTVALIDADE'].astype(str)\n",
+    "display(totvs.columns)\n",
+    "display(totvs.dtypes)\n",
+    "display(totvs.head())\n",
+    "\n"
    ]
   }
  ],
